j--/tests/fail/For.java
package fail;


public class For {
    
    public static void main(String[] args) {
        for(a;1<2;b){
            System.out.println("123");
        }
    }
}